bug with greensock and mobile spacing

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<img src="imgs/name-big.svg" class="name link big"/>
 						</div>
 						<div class="text-cont">
-							<h1> <span class="plant"> I’m a full stack product designer who lives in </span> <span class="outline" id="tlv" data-text="Tel Aviv"> Tel Aviv,</span>  <span class="plant"> studied in </span> <span class="outline" id="ny" data-text="New York"> New York,
+							<h1> <span class="plant"> I’m a full stack product designer who: lives in </span> <span class="outline" id="tlv" data-text="Tel Aviv"> Tel Aviv,</span>  <span class="plant"> studied in </span> <span class="outline" id="ny" data-text="New York"> New York,
 							</span> <span class="plant"> and was born and raised in </span> <span class="outline" id="sd" data-text="San Diego"> San Diego. </span>  </h1>
 
 							
@@ -312,7 +312,6 @@
 "></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 <script src="plugins/animation.gsap.js"></script>
-<script src="https://assets.codepen.io/16327/CustomEase3.min.js"></script>
 <script src="https://unpkg.com/splitting@1.0.6/dist/splitting.min.js"></script>
 <script src="js/shapes-css-styles.js"></script>
 
