password protected and console redesign update

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<div class="project-text web-store-text">
 									<h2 class="project-title "> A new product language & design system </h2>
 									<p class="project-explanation"> The process of coming up with a design system and visual language for the new Fireblocks platform</p>
-									<a href="design-system.html">
+									<a href="coming-soon.html">
 										<div class="textarrow-container">
 											<h4 class="link">Read Case Study</h4>
 											<div class="arrow">
