--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</div>
 						</div>
 
-						<div class="project" data-href="console-redesign.html" data-hero_img="imgs/fireblocks/console-2.0.svg">
+						<div class="project" data-href="console-redesign-protected.html" data-hero_img="imgs/fireblocks/console-2.0.svg">
 							<div class="text-wrapper">
 								
 								<div class="project-text web-store-text">
