--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<div class="project-text web-store-text">
 									<h2 class="project-title "> Web-app Redesign for Crypto Business Operations </h2>
 									<p class="project-explanation"> Designing one of the first web apps that it tailored for daily operations of cyrpto trading firms & hedgefunds</p>
-									<a href="console-redesign.html">
+									<a href="console-redesign-protected.html">
 										<div class="textarrow-container">
 											<h4 class="link">Read Case Study</h4>
 											<div class="arrow">
@@ -114,7 +114,7 @@
 							</div>
 						</div>
 
-						<div class="project" data-href="console-redesign-protected.html" data-hero_img="imgs/fireblocks/console-2.0.svg">
+						<div class="project" >
 							<div class="text-wrapper">
 								
 								<div class="project-text web-store-text">
