--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 										</div>
 									</a>
 								</div>
-								<img class="project-img" src="imgs/fireblocks/design-system-hero-img.svg"/>
+								<img class="project-img" src="imgs/fireblocks/design-system-hero-img.png"/>
 								
 
 							</div>
