--- a/console-redesign-protected.html
+++ b/console-redesign-protected.html
@@ -6,13 +6,17 @@
     <meta name="robots" content="noindex, nofollow">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;800&family=Montserrat:wght@400;500;600;700;800;900&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/general.css">
-
+    <meta itemprop=image content=/images/share-image.png>
+        <link rel="icon" href="favicon/favicon.ico" sizes="any"><!-- 32×32 -->
+        <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png"><!-- 180×180 -->
+        <link rel="manifest" href="favicon/manifest.webmanifest">
     <title>Password Protected Page</title>
     <style>
     
     </style>
   </head>
-  <body>
+  <body class="other-page">
     <iframe id="contentFrame" frameBorder="0" allowfullscreen></iframe>
     <div id="dialogWrap">
         <div id="dialogWrapCell">
