--- a/console-redesign-protected.html
+++ b/console-redesign-protected.html
@@ -15,6 +15,15 @@
     <style>
     
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXEQLFXJZH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TXEQLFXJZH');
+    </script>
   </head>
   <body class="other-page">
     <iframe id="contentFrame" frameBorder="0" allowfullscreen></iframe>
