--- a/design-system.html
+++ b/design-system.html
@@ -54,7 +54,7 @@
 			<h4> Challenges & constraints </h4>
 			<ul>
 				<li><p>I was the only designer at the company, meaning I had my hands full and could not devote full-time to the design system.</p></li>
-				<li><p>We had a very short timeline, as we needed to launch the new app as quickly as possible in order to kill competition. So the design system had to be created simultaneously with the design of the product (read about that process here).</p></li>
+				<li><p>We had a very short timeline, as we needed to launch the new app as quickly as possible in order to kill competition. The design system had to be created simultaneously with the <span><a class="link" href="console-redesign-protected.html">web app redesign </a></span>.</p></li>
 				<li><p>I migrated from Sketch to Figma in the middle of design, which meant rebuilding all components between designing - but it was worth it!</p></li>
 			</ul>
 		</div>
@@ -70,7 +70,7 @@
 				<br><br>
 				From there I created a few conceptual UI stills that tested out some colors, typography, and component styles within the general layout I designed for the console. I showed these concept images to stakeholders and marketing, and after a few iterations I had a basic visual direction.
 		</div>
-		<img src="imgs/fireblocks/explorations.svg"/>
+		<img src="imgs/fireblocks/explorations.png"/>
 		<div class="text-main">
 			<h1>Atoms to organisms</h1>
 			<p>I was inspired by the Atomic Design System Methodology by Bob Frost. In fact it blew my mind. Genius! It helped me both in how to approach and structure the design system. </p>
@@ -104,7 +104,7 @@
 			<p> Creating a color system was not an easy task, and today I would do it differently.  I gave every color a number: such as “Primary 1”, “Primary 2”, and “Shade 1”, “Shade 2”. This worked well, however to take it a step further, today I would tokenize these shades and link them to their usages: “Background - light”, “Background - dark” and so on. Figma and the rest of the design community have really paved the way by creating much more established methodologies and tools for systemizing colors in the design system.</p>
 		</div>
 		<div class="full-page-img-container">
-			<img src='imgs/fireblocks/color-scheme.png' style="width: 70%" />
+			<img src='imgs/fireblocks/color-scheme.png' style="width: 50%" />
 		</div>
 		<div class="text-main">
 			<h2> Spacing </h2>
