added the design system case study and fixed contact page on case studies

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<div class="text-wrapper">
 								
 								<div class="project-text web-store-text">
-									<h2 class="project-title "> Web-app Redesign for Crypto Business Operations </h2>
+									<h2 class="project-title "> Web-app redesign for crypto business operations </h2>
 									<p class="project-explanation"> Designing one of the first web apps that it tailored for daily operations of cyrpto trading firms & hedgefunds</p>
 									<a href="console-redesign-protected.html">
 										<div class="textarrow-container">
@@ -123,7 +123,7 @@
 								<div class="project-text web-store-text">
 									<h2 class="project-title "> A new product language & design system </h2>
 									<p class="project-explanation"> The process of coming up with a design system and visual language for the new Fireblocks platform</p>
-									<a href="coming-soon.html">
+									<a href="design-system-protected.html">
 										<div class="textarrow-container">
 											<h4 class="link">Read Case Study</h4>
 											<div class="arrow">
