added meta tags with images on index file

--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 		</script>
 		<meta charset=utf-8>
 		<meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
-		<meta itemprop=image content=/images/share-image.png>
+
+		<meta name=description content="Dana Avesar portfolio website">
+		<meta name="keywords" content="HTML, CSS, JavaScript">
+		<meta name="author" content="Dana Avesar">
+		<meta property="og:image"content="imgs/fireblocks/console-2.0-mockup.png" />
+		<meta property="og:image:whatsapp"content="favicon/icon.svg" />
+
+
+		<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+
 		<link rel="icon" href="favicon/favicon.ico" sizes="any"><!-- 32×32 -->
 		<link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
 		<link rel="apple-touch-icon" href="favicon/apple-touch-icon.png"><!-- 180×180 -->
 		<link rel="manifest" href="favicon/manifest.webmanifest">
 		<title>Dana Avesar Portfolio</title>
-		<meta name=description content="Dana Avesar portfolio website">
-		<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 		<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;800&family=Montserrat:wght@400;500;600;700;800;900&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/shapes.css">
