--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 		<meta name=description content="Dana Avesar portfolio website">
 		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<meta name="author" content="Dana Avesar">
-		<meta property="og:image"content="imgs/fireblocks/console-2.0-mockup.png" />
-		<meta property="og:image:whatsapp"content="favicon/apple-touch-icon.png" />
+		<!-- <meta property="og:image"content="imgs/fireblocks/console-2.0-mockup.png" /> -->
+		<meta property="og:image"content="imgs/fireblocks/apple-touch-icon.png" /> 
+
+		<!-- <meta property="og:image:whatsapp"content="favicon/apple-touch-icon.png" /> -->
 
 		<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
 
