--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<h1> <span class="plant"> I’m a full stack product designer who: lives in </span> <span class="outline" id="tlv" data-text="Tel Aviv"> Tel Aviv,</span>  <span class="plant"> studied in </span> <span class="outline" id="ny" data-text="New York"> New York,
 							</span> <span class="plant"> and was born and raised in </span> <span class="outline" id="sd" data-text="San Diego"> San Diego. </span>  </h1>
 							<div class="explanation project-title">
-							I have been designing beautiful user-centered solutions since 2014. In the last three years I had the privilege of being the founding product designer at startup turned centaur <a class="link" href="www.fireblocks.com">Fireblocks</a>.
+							I have been designing beautiful user-centered solutions since 2014. In the last three years I had the privilege of being the founding product designer at startup turned centaur <a class="link"  target="_blank" href="https://www.fireblocks.com/">Fireblocks</a>.
 						</div>
 							
 						</div>
